<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_background" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/codigo"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtcodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/programa"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/edtprograma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btnguardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar" />

            <Button
                android:id="@+id/btnbuscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buscar" />

            <Button
                android:id="@+id/btnlistado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listado" />
            <Button
                android:id="@+id/modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modificar" />

            <Button
                android:id="@+id/eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Eliminar" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_launcher_background" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
